# hr-agent

./: .env.example  .flake8  .gitignore  .pylintrc  ARCHITECTURE.md  Dockerfile  EVALUATION.md  README.md  app.py  compare_agents.py  compare_suites.py  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt  ruff.toml  run_evals.py  test_tools.py
.github/workflows/: pr-checks.yml
.streamlit/: config.toml
apps/: __init__.py
apps/api/: server.py
apps/web/: app.py  command_center_helpers.py
apps/web-ts/: index.html  package-lock.json  tailwind.config.ts
docs/: architecture.md  deployment-free-testing.md  evaluation.md  test-strategy.md
evals/: __init__.py  analysis.py  datasets.py  deepeval_runner.py  generate_dataset.py  generate_dataset_standalone.py  generated_dataset_1000.py  logger.py  metrics.py  runner.py  test_suites.py
evals/runners/: run_evals.py
hr_agent/: __init__.py  api.py  cli.py  seed.py
hr_agent/agent/: __init__.py  langgraph_agent.py
hr_agent/configs/: config.py
hr_agent/domain/: __init__.py  models.py
hr_agent/policies/: policies.yaml  policy_engine.py
hr_agent/repositories/: __init__.py  base.py  command_center.py  compensation.py  employee.py  escalation.py  hr_request.py
hr_agent/services/: __init__.py  base.py  command_center.py
hr_agent/tools/: langchain_tools.py
hr_agent/tracing/: observability.py
hr_agent/utils/: db.py  decorators.py  errors.py  (+3 more)
tests/: test_access_control.py  test_api_escalations.py  test_api_hr_requests.py  test_api_sessions.py  test_command_center_requests.py  test_command_center_ui_helpers.py  test_escalation_requests.py  test_generate_dataset_standalone.py  test_hr_requests.py  test_performance.py  test_required_field_validation.py  test_sorting_engine.py  test_state_machine.py  test_validation_and_security.py
(+63 files in other folders)
